--- a/src/e_cidadania/apps/proposals/templates/proposals/proposal_list.html
+++ b/src/e_cidadania/apps/proposals/templates/proposals/proposal_list.html
@@ -14,12 +14,12 @@
       <div id="proposal-wrapper">
         {% if perms.proposals.add_proposal %}
         <div id="tools">
-          <a href="add/">{% trans "Add" %}</a> |
+          <a href="../add/"><img src="{{ STATIC_URL }}/assets/icons/add16.png" alt="{% trans 'Add proposal' %}" title="{% trans 'Add proposal' %}"/></a> 
           {% if perms.proposals.edit_proposal %}
-            <a href="{{ p.id }}/edit/">{% trans "Edit" %}</a> |
+            <a href="edit/{{ p.id }}"><img src="{{ STATIC_URL }}/assets/icons/edit16.png" alt="{% trans 'Edit' %}" title="{% trans 'Edit' %}"/></a> 
           {% endif %}
           {% if perms.proposals.delete_proposal %}
-            <a href="{{ p.id }}/delete/">{% trans "Delete" %}</a>
+            <a href="delete/{{ p.id }}"><img src="{{ STATIC_URL }}/assets/icons/delete16.png" alt="{% trans 'Delete' %}" title="{% trans 'Delete' %}"/></a>
           {% endif %}
         </div>
         {% endif %}
@@ -28,7 +28,7 @@
         </div>
         <!-- Here goes the voting button -->
         <div id="proposal">
-          <div class="title"><a href="{{ request.path }}/{{ p.id }}/">{{ p.title }}</a></div>
+          <div class="title"><a href="{{ request.path }}{{ p.id }}/">{{ p.title }}</a></div>
           <div class="message">{{ p.message|truncatewords:12 }}</div>
           {% get_comment_count for p as comment_count %}
           <div class="creator">{% trans "proposed by " %} <a href="/accounts/{{ p.author }}">{{ p.author }}</a> {% trans " at " %} {{ p.pub_date|date:"j/m/Y G:i" }} | <a href="{{ request.path }}view/{{ p.id }}/">{{ comment_count }} {% trans "comments" %}</a></div>
@@ -43,9 +43,10 @@
     {% endfor %}
     </div>
     
-    <div class="pagebutton">
-      <a href="../">{% trans "Go back" %}</a>
-    </div>
+  <hr />
+  <p class="buttons">
+    <a href="../../" class="pagebutton">{% trans "Go back" %}</a>
+  </p>
   {% endblock %}
 
   {% block rightcol %}
