--- a/src/e_cidadania/apps/spaces/templates/spaces/space_index.html
+++ b/src/e_cidadania/apps/spaces/templates/spaces/space_index.html
@@ -104,7 +104,7 @@
       {% if get_place.mod_cal %}
         <div id="widget">
           <h2>{% trans "Calendar" %}</h2><br />
-          <p>El calendario está activado</p>
+          <div id="datepicker"></div>
         </div>
       {% endif %}
       
