--- a/src/e_cidadania/apps/cal/templates/cal/calendar.html
+++ b/src/e_cidadania/apps/cal/templates/cal/calendar.html
@@ -1,4 +1,29 @@
 {% extends "base.html" %}
 {% load i18n %}
 
-{{ calendar }}
+{% block title %}{% trans "Calendar" %}{% endblock %}
+{% block logo %}<img src="{{ MEDIA_URL }}/{{ get_place.logo }}">{% endblock %}
+{% block banner %}<img src="{{ MEDIA_URL }}/{{ get_place.banner }}">{% endblock %}
+
+{% block content %}
+
+  {% block centercol %}
+    <div class="grid_11">
+    
+      <div id="contenttitles">
+        {% trans "Calendar" %}
+      </div>
+
+      {{ calendar }} 
+  {% endblock %}
+
+
+  {% block rightcol %}
+    <div class="grid_5">
+      <div id="widget">
+        <p>Random trext</p>
+      </div>
+    </div>
+  {% endblock %}
+
+{% endblock %}
