Fixed #85 and minor styling issues

--- a/src/e_cidadania/apps/cal/templates/cal/calendar.html
+++ b/src/e_cidadania/apps/cal/templates/cal/calendar.html
@@ -14,7 +14,9 @@
         {% trans "Calendar" %}
       </div>
 
-      {{ calendar }} 
+      {{ calendar }}
+      
+    </div>
   {% endblock %}
 
 
