Major commit with lots of changes
Calendar module: created template, localize, added error templates, added header to URLs, added view security, month navigation, modfied styling.
Settings: Fixed locale settings, now the have the complete codes.
Templates: Recreated 500 error template.

--- a/src/e_cidadania/apps/cal/templates/cal/calendar.html
+++ b/src/e_cidadania/apps/cal/templates/cal/calendar.html
@@ -16,6 +16,13 @@
 
       {{ calendar }}
       
+      <hr />
+      <p class="buttons">
+        <a href="../{{ prevmonth }}/" class="pagebutton">{% trans 'Previous month' %}</a>
+        <a href="../{{ nextmonth }}/" class="pagebutton">{% trans 'Next month' %}</a>
+        <a href="../../" class="pagebutton">{% trans "Go back" %}</a>
+      </p>
+        
     </div>
   {% endblock %}
 
