--- a/src/e_cidadania/apps/spaces/templates/spaces/space_add.html
+++ b/src/e_cidadania/apps/spaces/templates/spaces/space_add.html
@@ -1,5 +1,6 @@
 {% extends "base.html" %}
 {% load i18n %}
+{% load wysiwyg %}
 
 {% block title %}{% trans "Create new space" %}{% endblock %}
 
@@ -29,6 +30,7 @@
         <div class="fieldWrapper">
           <label for="id_description">{% trans "Description" %}:</label>
           {{ form.description }}
+          {% wysiwyg_editor "id_description" %}
         </div>
         <div class="fieldWrapper">
           <label for="id_logo">{% trans "Logotype" %}:</label>
