--- a/src/e_cidadania/templates/site_index.html
+++ b/src/e_cidadania/templates/site_index.html
@@ -118,7 +118,7 @@ new TWTR.Widget({
   }
 }).render().setUser('ecidadaniafloss').start();
 </script>
-      <img src="{{ STATIC_URL }}/assets/logos/rss_logo.png" alt="Feed RSS"/>
+      <a href="/rss/"><img src="{{ STATIC_URL }}/assets/logos/rss_logo.png" alt="Feed RSS"/></a>
       <a href="http://www.facebook.com/cidadania.coop"><img src="{{ STATIC_URL }}/assets/logos/facebook_logo.png" alt="Facebook"/></a>
       <a href="http://www.twitter.com/ecidadaniafloss"><img src="http://twitter-badges.s3.amazonaws.com/t_logo-b.png" alt="Seguir a ecidadaniafloss en Twitter"/></a>
       <a href="http://tuenti.com"><img src="{{ STATIC_URL }}/assets/logos/tuenti_logo.png" alt="Compartir en Tuenti"/></a>
