Fixed #93 RSS generation. Updated initial_data. Renamed common fields in news module

--- a/src/e_cidadania/apps/news/templates/news/post_edit.html
+++ b/src/e_cidadania/apps/news/templates/news/post_edit.html
@@ -48,24 +48,24 @@
         </div>
         
         <div class="fieldWrapper">
-          {{ form.post_pub_index.errors }}
+          {{ form.pub_index.errors }}
           <label for="id_name">{% trans "Publish in index page" %}:</label>
-          <p>{{ form.post_pub_index }}</p>
-          <p id="form_help_text">{{ form.post_pub_index.help_text }}</p>
+          <p>{{ form.pub_index }}</p>
+          <p id="form_help_text">{{ form.pub_index.help_text }}</p>
         </div>
         
         <div class="fieldWrapper">
-          {{ form.post_author.errors }}
+          {{ form.author.errors }}
           <label for="id_name">{% trans "Author" %}:</label>
-          <p>{{ form.post_author }}</p>
-          <p id="form_help_text">{{ form.post_author.help_text }}</p>
+          <p>{{ form.author }}</p>
+          <p id="form_help_text">{{ form.author.help_text }}</p>
         </div>
         
         <div class="fieldWrapper">
-          {{ form.post_space.errors }}
+          {{ form.space.errors }}
           <label for="id_name">{% trans "Publish in space" %}:</label>
-          <p>{{ form.post_space }}</p>
-          <p id="form_help_text">{{ form.post_space.help_text }}</p>
+          <p>{{ form.space }}</p>
+          <p id="form_help_text">{{ form.space.help_text }}</p>
         </div>
 
         <hr />
