--- a/src/e_cidadania/apps/news/templates/news/post_add.html
+++ b/src/e_cidadania/apps/news/templates/news/post_add.html
@@ -53,14 +53,14 @@
         </div>
 
         <div class="fieldWrapper">
-          {{ form.post_pub_index.errors }}
+          {{ form.pub_index.errors }}
           <label for="id_name">{% trans "Publish in index page" %}:</label>
-          <p>{{ form.post_pub_index }}</p>
-          <p id="form_help_text">{{ form.post_pub_index.help_text }}</p>
+          <p>{{ form.pub_index }}</p>
+          <p id="form_help_text">{{ form.pub_index.help_text }}</p>
         </div>
 
-        {{ form.post_author.as_hidden }}
-        {{ form.post_space.as_hidden }}
+        {{ form.author.as_hidden }}
+        {{ form.space.as_hidden }}
 
         <p><input type="submit" value="{% trans 'Create' %}" /></p>
 
