--- a/src/e_cidadania/apps/news/templates/news/post_detail.html
+++ b/src/e_cidadania/apps/news/templates/news/post_detail.html
@@ -33,7 +33,7 @@
         {% endif %}
         <h1>{{ news.post_title }}</h1>
         <p>{{ news.post_message|safe }}</p>
-        <p>{% trans "Written by" %} {{ news.post_author }} {% trans "on" %} {{ news.post_pubdate }}</p>
+        <p>{% trans "Written by" %} {{ news.author }} {% trans "on" %} {{ news.pub_date }}</p>
       </div>
       
       <p>{% render_comment_list for news %}</p>
