--- a/src/e_cidadania/apps/spaces/templates/spaces/space_list.html
+++ b/src/e_cidadania/apps/spaces/templates/spaces/space_list.html
@@ -21,6 +21,22 @@
         <a href="../" class="pagebutton">{% trans "Go back" %}</a>
       </p>
     </div>
+    
+    {% if is_paginated %}
+    <div class="pagination">
+      <span class="page-links">
+      {% if page_obj.has_previous %}
+        <a href="/spaces/?page={{ page_obj.previous_page_number }}">previous</a>
+      {% endif %}
+      <span class="page-current">
+        Page {{ page_obj.number }} of {{ page_obj.paginator.num_pages }}.
+      </span>
+      {% if page_obj.has_next %}
+        <a href="/spaces/?page={{ page_obj.next_page_number }}">next</a>
+      {% endif %}
+      </span>
+    </div>
+    {% endif %}
   {% endblock %}
 
 {% endblock %}
