--- a/src/e_cidadania/apps/spaces/templates/spaces/space_edit.html
+++ b/src/e_cidadania/apps/spaces/templates/spaces/space_edit.html
@@ -72,6 +72,23 @@
         </div>
         {{ form.author.as_hidden }}
         
+        {% comment %}
+            Entity forms
+        {% endcomment %}
+
+        {{ entityformset.management_form }}
+
+        {% for entity in entityformset %}
+          {{ form.id }}
+          <div class="fieldWrapper">
+            {{ entity.errors }}
+            {% trans "Name" %}: {{ entity.name }}<br />
+            {% trans "Website" %}: {{ entity.website }}<br />
+            {% trans "Logotype" %}: {{ entity.logo }}
+            {{ entity.space.as_hidden }}
+        </div>
+        {% endfor %}
+        
         <hr />
         <p class="buttons">
           <input type="submit" value="{% trans 'Save' %}" />
