--- a/src/e_cidadania/static_files/css/screen.css
+++ b/src/e_cidadania/static_files/css/screen.css
@@ -797,3 +797,20 @@ td.filled ul li a {
     border: 3px solid #DD0;
 }
 /* END CALENDAR */
+
+/* SPACES */
+#spaceitem {
+    margin: 15px;
+    padding: 10px;
+}
+
+.spacetitle {
+    color: #000;
+    font-size: 2em;
+}
+
+.spacedesc {
+    color: #BBB;
+    font-size: 1em;
+}
+/* END SPACES */
