--- a/src/e_cidadania/apps/userprofile/templates/userprofile/account/login.html
+++ b/src/e_cidadania/apps/userprofile/templates/userprofile/account/login.html
@@ -1,6 +1,14 @@
 {% extends "base.html" %}
 {% load i18n %}
 
+{% if messages %}
+  <ul class="messages">
+    {% for message in messages %}
+      <li {% if message.tags %} class="{{ message.tags }}" {% endif %}>{{ message }}</li>
+    {% endfor %}
+  </ul>
+{% endif %}
+
 {% block title %}{% trans "User login" %}{% endblock %}
 {% block robots %}noindex,nofollow{% endblock %}
 
