--- a/src/e_cidadania/templates/base.html
+++ b/src/e_cidadania/templates/base.html
@@ -19,6 +19,7 @@
 		<script src="{{ STATIC_URL }}/js/jquery.js" type="text/javascript"></script>
 		<script src="{{ STATIC_URL }}/js/jquery-ui.js" type="text/javascript"></script>
 		<script src="{{ STATIC_URL }}/js/dropdown.js" type="text/javascript"></script>
+    	<script src="{{ STATIC_URL }}/js/site.js" type="text/javascript"></script>
 		
 		{% comment %}
 		  This will load the wysiwyg system for all pages that iherit from base.html
@@ -28,7 +29,8 @@
 	<body>
     
     {% if messages %}
-      <ul class="messages">
+      <ul class="messages hidden">
+        <div class="closemsg">X</div>
         {% for message in messages %}
           <li {% if message.tags %} class="{{ message.tags }}" {% endif %}>{{ message|safe }}</li>
         {% endfor %}
