--- a/src/e_cidadania/apps/news/templates/news/post_add.html
+++ b/src/e_cidadania/apps/news/templates/news/post_add.html
@@ -3,18 +3,16 @@
 {% load wysiwyg %}
 
 {% block title %}{% trans "Add new post" %}{% endblock %}
+
 {% block logo %}
-  {% if not get_place %}
-    <a href="/"><img src="/{{ STATIC_URL }}/assets/logos/index.png"/></a>
-  {% else %}
-    <img src="/{{ MEDIA_URL }}/{{ get_place.logo }}">
+  {% if get_place %}
+    <img src="{{ MEDIA_URL }}/{{ get_place.logo }}">
   {% endif %}
 {% endblock %}
+  
 {% block banner %}
-  {% if not get_place %}
-    <img src="/{{ STATIC_URL }}/assets/banners/index.png"/>
-  {% else %}
-    <img src="/{{ MEDIA_URL }}/{{ get_place.banner }}">
+  {% if get_place %}
+    <img src="{{ MEDIA_URL }}/{{ get_place.banner }}">
   {% endif %}
 {% endblock %}
 
