--- a/src/e_cidadania/apps/spaces/templates/spaces/space_list.html
+++ b/src/e_cidadania/apps/spaces/templates/spaces/space_list.html
@@ -17,7 +17,7 @@
           <p class="spacedesc">{{ space.description|removetags:"p"|safe }}</p>
         </div>
       {% empty %}
-        <p>{% trans "There are no spaces." %}</p>
+        <p>{% trans "There are no public spaces or spaces you are registered to." %}</p>
       {% endfor %}
       <hr />
       <p>
